Using express instead of electron

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/cocoen@2.0.5/dist/js/cocoen.min.js"
         integrity="sha256-RQkGm3tzkAvrJszYHJHEa5riLOOjGmWj3gAmlVb+SOQ=" crossorigin="anonymous"></script>
-<script src="../dist/bundle.js"></script>
+<script src="/bundle.js"></script>
 </body>
 </html>
